--- a/public/styles.css
+++ b/public/styles.css
@@ -572,16 +572,8 @@ video {
   margin: 0.75rem;
 }
 
-.block {
-  display: block;
-}
-
 .flex {
   display: flex;
-}
-
-.hidden {
-  display: none;
 }
 
 .h-10 {
@@ -765,30 +757,24 @@ video {
   background-image: linear-gradient(to right, var(--tw-gradient-stops));
 }
 
-.from-white {
-  --tw-gradient-from: #fff var(--tw-gradient-from-position);
-  --tw-gradient-to: rgb(255 255 255 / 0) var(--tw-gradient-to-position);
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
-}
-
-.from-gray-800 {
-  --tw-gradient-from: #1f2937 var(--tw-gradient-from-position);
-  --tw-gradient-to: rgb(31 41 55 / 0) var(--tw-gradient-to-position);
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
-}
-
 .from-gray-800\/40 {
   --tw-gradient-from: rgb(31 41 55 / 0.4) var(--tw-gradient-from-position);
   --tw-gradient-to: rgb(31 41 55 / 0) var(--tw-gradient-to-position);
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
 
-.to-pink-500 {
-  --tw-gradient-to: #ec4899 var(--tw-gradient-to-position);
+.from-white {
+  --tw-gradient-from: #fff var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(255 255 255 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
 
 .to-black\/60 {
   --tw-gradient-to: rgb(0 0 0 / 0.6) var(--tw-gradient-to-position);
+}
+
+.to-pink-500 {
+  --tw-gradient-to: #ec4899 var(--tw-gradient-to-position);
 }
 
 .bg-clip-text {
@@ -815,10 +801,6 @@ video {
 
 .p-2 {
   padding: 0.5rem;
-}
-
-.p-3 {
-  padding: 0.75rem;
 }
 
 .px-2 {
@@ -1071,28 +1053,12 @@ body::-webkit-scrollbar-track {
     position: fixed;
   }
 
-  .mobile\:absolute {
-    position: absolute;
-  }
-
   .mobile\:relative {
     position: relative;
   }
 
-  .mobile\:right-5 {
-    right: 1.25rem;
-  }
-
   .mobile\:top-0 {
     top: 0px;
-  }
-
-  .mobile\:top-5 {
-    top: 1.25rem;
-  }
-
-  .mobile\:top-6 {
-    top: 1.5rem;
   }
 
   .mobile\:z-30 {
@@ -1123,6 +1089,10 @@ body::-webkit-scrollbar-track {
     display: none;
   }
 
+  .mobile\:h-80 {
+    height: 20rem;
+  }
+
   .mobile\:h-\[10\%\] {
     height: 10%;
   }
@@ -1141,18 +1111,6 @@ body::-webkit-scrollbar-track {
 
   .mobile\:h-screen {
     height: 100vh;
-  }
-
-  .mobile\:h-40 {
-    height: 10rem;
-  }
-
-  .mobile\:h-72 {
-    height: 18rem;
-  }
-
-  .mobile\:h-80 {
-    height: 20rem;
   }
 
   .mobile\:w-\[80\%\] {
@@ -1174,11 +1132,6 @@ body::-webkit-scrollbar-track {
 
   .mobile\:translate-x-0 {
     --tw-translate-x: 0px;
-    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-  }
-
-  .mobile\:translate-x-\[100\%\] {
-    --tw-translate-x: 100%;
     transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
   }
 
@@ -1208,17 +1161,17 @@ body::-webkit-scrollbar-track {
     border-right-width: 1px;
   }
 
+  .mobile\:bg-black {
+    --tw-bg-opacity: 1;
+    background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+  }
+
   .mobile\:bg-black\/50 {
     background-color: rgb(0 0 0 / 0.5);
   }
 
   .mobile\:bg-black\/90 {
     background-color: rgb(0 0 0 / 0.9);
-  }
-
-  .mobile\:bg-black {
-    --tw-bg-opacity: 1;
-    background-color: rgb(0 0 0 / var(--tw-bg-opacity));
   }
 
   .mobile\:bg-gradient-to-tr {
@@ -1234,19 +1187,9 @@ body::-webkit-scrollbar-track {
     padding-right: 6rem;
   }
 
-  .mobile\:px-3 {
-    padding-left: 0.75rem;
-    padding-right: 0.75rem;
-  }
-
-  .mobile\:py-10 {
-    padding-top: 2.5rem;
-    padding-bottom: 2.5rem;
-  }
-
-  .mobile\:py-40 {
-    padding-top: 10rem;
-    padding-bottom: 10rem;
+  .mobile\:px-5 {
+    padding-left: 1.25rem;
+    padding-right: 1.25rem;
   }
 
   .mobile\:py-20 {
@@ -1254,9 +1197,9 @@ body::-webkit-scrollbar-track {
     padding-bottom: 5rem;
   }
 
-  .mobile\:px-5 {
-    padding-left: 1.25rem;
-    padding-right: 1.25rem;
+  .mobile\:py-40 {
+    padding-top: 10rem;
+    padding-bottom: 10rem;
   }
 
   .mobile\:pb-10 {
@@ -1399,6 +1342,10 @@ body::-webkit-scrollbar-track {
 
   .lg\:rounded-sm {
     border-radius: 0.125rem;
+  }
+
+  .lg\:border-none {
+    border-style: none;
   }
 
   .lg\:bg-black\/80 {
