--- a/public/styles.css
+++ b/public/styles.css
@@ -757,24 +757,26 @@ video {
   background-image: linear-gradient(to right, var(--tw-gradient-stops));
 }
 
-.from-gray-800\/40 {
-  --tw-gradient-from: rgb(31 41 55 / 0.4) var(--tw-gradient-from-position);
-  --tw-gradient-to: rgb(31 41 55 / 0) var(--tw-gradient-to-position);
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
-}
-
 .from-white {
   --tw-gradient-from: #fff var(--tw-gradient-from-position);
   --tw-gradient-to: rgb(255 255 255 / 0) var(--tw-gradient-to-position);
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
 
-.to-black\/60 {
-  --tw-gradient-to: rgb(0 0 0 / 0.6) var(--tw-gradient-to-position);
-}
-
 .to-pink-500 {
   --tw-gradient-to: #ec4899 var(--tw-gradient-to-position);
+}
+
+.to-\[\] {
+  --tw-gradient-to:  var(--tw-gradient-to-position);
+}
+
+.to-\[\#\] {
+  --tw-gradient-to: # var(--tw-gradient-to-position);
+}
+
+.to-\[\#0092F3\] {
+  --tw-gradient-to: #0092F3 var(--tw-gradient-to-position);
 }
 
 .bg-clip-text {
@@ -1174,8 +1176,34 @@ body::-webkit-scrollbar-track {
     background-color: rgb(0 0 0 / 0.9);
   }
 
+  .mobile\:bg-black\/60 {
+    background-color: rgb(0 0 0 / 0.6);
+  }
+
   .mobile\:bg-gradient-to-tr {
     background-image: linear-gradient(to top right, var(--tw-gradient-stops));
+  }
+
+  .mobile\:from-\[\] {
+    --tw-gradient-from:  var(--tw-gradient-from-position);
+    --tw-gradient-to: rgb(255 255 255 / 0) var(--tw-gradient-to-position);
+    --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+  }
+
+  .mobile\:from-\[\#\] {
+    --tw-gradient-from: # var(--tw-gradient-from-position);
+    --tw-gradient-to: rgb(255 255 255 / 0) var(--tw-gradient-to-position);
+    --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+  }
+
+  .mobile\:from-\[\#0099ff\] {
+    --tw-gradient-from: #0099ff var(--tw-gradient-from-position);
+    --tw-gradient-to: rgb(0 153 255 / 0) var(--tw-gradient-to-position);
+    --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+  }
+
+  .mobile\:to-\[\#0092F3\] {
+    --tw-gradient-to: #0092F3 var(--tw-gradient-to-position);
   }
 
   .mobile\:p-0 {
@@ -1295,6 +1323,10 @@ body::-webkit-scrollbar-track {
     height: 100%;
   }
 
+  .lg\:h-screen {
+    height: 100vh;
+  }
+
   .lg\:w-1\/2 {
     width: 50%;
   }
@@ -1340,6 +1372,10 @@ body::-webkit-scrollbar-track {
     margin-bottom: calc(0px * var(--tw-space-y-reverse));
   }
 
+  .lg\:overflow-y-auto {
+    overflow-y: auto;
+  }
+
   .lg\:rounded-sm {
     border-radius: 0.125rem;
   }
@@ -1360,18 +1396,90 @@ body::-webkit-scrollbar-track {
     background-color: rgb(75 85 99 / 0.8);
   }
 
-  .lg\:bg-red-500 {
+  .lg\:bg-gray-900 {
     --tw-bg-opacity: 1;
-    background-color: rgb(239 68 68 / var(--tw-bg-opacity));
+    background-color: rgb(17 24 39 / var(--tw-bg-opacity));
   }
 
   .lg\:bg-transparent {
     background-color: transparent;
   }
 
-  .lg\:bg-gray-900 {
+  .lg\:bg-\[\] {
+    background-color: ;
+  }
+
+  .lg\:bg-\[\#\] {
+    background-color: #;
+  }
+
+  .lg\:bg-\[\#00\] {
+    background-color: #00;
+  }
+
+  .lg\:bg-\[\#00ff\] {
+    background-color: #00ff;
+  }
+
+  .lg\:bg-\[\#00ff99\] {
     --tw-bg-opacity: 1;
-    background-color: rgb(17 24 39 / var(--tw-bg-opacity));
+    background-color: rgb(0 255 153 / var(--tw-bg-opacity));
+  }
+
+  .lg\:bg-\[\#0099\] {
+    background-color: #0099;
+  }
+
+  .lg\:bg-\[\#0099ff\] {
+    --tw-bg-opacity: 1;
+    background-color: rgb(0 153 255 / var(--tw-bg-opacity));
+  }
+
+  .lg\:bg-\[\@151515\] {
+    background-color: @151515;
+  }
+
+  .lg\:bg-\[\#151515\] {
+    --tw-bg-opacity: 1;
+    background-color: rgb(21 21 21 / var(--tw-bg-opacity));
+  }
+
+  .lg\:bg-gradient-to-t {
+    background-image: linear-gradient(to top, var(--tw-gradient-stops));
+  }
+
+  .lg\:from-black {
+    --tw-gradient-from: #000 var(--tw-gradient-from-position);
+    --tw-gradient-to: rgb(0 0 0 / 0) var(--tw-gradient-to-position);
+    --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+  }
+
+  .lg\:from-black\/50 {
+    --tw-gradient-from: rgb(0 0 0 / 0.5) var(--tw-gradient-from-position);
+    --tw-gradient-to: rgb(0 0 0 / 0) var(--tw-gradient-to-position);
+    --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+  }
+
+  .lg\:from-black\/40 {
+    --tw-gradient-from: rgb(0 0 0 / 0.4) var(--tw-gradient-from-position);
+    --tw-gradient-to: rgb(0 0 0 / 0) var(--tw-gradient-to-position);
+    --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+  }
+
+  .lg\:to-black {
+    --tw-gradient-to: #000 var(--tw-gradient-to-position);
+  }
+
+  .lg\:to-black\/60 {
+    --tw-gradient-to: rgb(0 0 0 / 0.6) var(--tw-gradient-to-position);
+  }
+
+  .lg\:to-black\/0 {
+    --tw-gradient-to: rgb(0 0 0 / 0) var(--tw-gradient-to-position);
+  }
+
+  .lg\:to-black\/50 {
+    --tw-gradient-to: rgb(0 0 0 / 0.5) var(--tw-gradient-to-position);
   }
 
   .lg\:p-0 {
