--- a/public/styles.css
+++ b/public/styles.css
@@ -767,18 +767,6 @@ video {
   --tw-gradient-to: #ec4899 var(--tw-gradient-to-position);
 }
 
-.to-\[\] {
-  --tw-gradient-to:  var(--tw-gradient-to-position);
-}
-
-.to-\[\#\] {
-  --tw-gradient-to: # var(--tw-gradient-to-position);
-}
-
-.to-\[\#0092F3\] {
-  --tw-gradient-to: #0092F3 var(--tw-gradient-to-position);
-}
-
 .bg-clip-text {
   -webkit-background-clip: text;
           background-clip: text;
@@ -1176,24 +1164,8 @@ body::-webkit-scrollbar-track {
     background-color: rgb(0 0 0 / 0.9);
   }
 
-  .mobile\:bg-black\/60 {
-    background-color: rgb(0 0 0 / 0.6);
-  }
-
   .mobile\:bg-gradient-to-tr {
     background-image: linear-gradient(to top right, var(--tw-gradient-stops));
-  }
-
-  .mobile\:from-\[\] {
-    --tw-gradient-from:  var(--tw-gradient-from-position);
-    --tw-gradient-to: rgb(255 255 255 / 0) var(--tw-gradient-to-position);
-    --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
-  }
-
-  .mobile\:from-\[\#\] {
-    --tw-gradient-from: # var(--tw-gradient-from-position);
-    --tw-gradient-to: rgb(255 255 255 / 0) var(--tw-gradient-to-position);
-    --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
   }
 
   .mobile\:from-\[\#0099ff\] {
@@ -1315,16 +1287,16 @@ body::-webkit-scrollbar-track {
     height: 5rem;
   }
 
-  .lg\:h-\[1000px\] {
-    height: 1000px;
-  }
-
   .lg\:h-full {
     height: 100%;
   }
 
   .lg\:h-screen {
     height: 100vh;
+  }
+
+  .lg\:h-auto {
+    height: auto;
   }
 
   .lg\:w-1\/2 {
@@ -1384,6 +1356,16 @@ body::-webkit-scrollbar-track {
     border-style: none;
   }
 
+  .lg\:bg-\[\#0099ff\] {
+    --tw-bg-opacity: 1;
+    background-color: rgb(0 153 255 / var(--tw-bg-opacity));
+  }
+
+  .lg\:bg-\[\#151515\] {
+    --tw-bg-opacity: 1;
+    background-color: rgb(21 21 21 / var(--tw-bg-opacity));
+  }
+
   .lg\:bg-black\/80 {
     background-color: rgb(0 0 0 / 0.8);
   }
@@ -1396,86 +1378,18 @@ body::-webkit-scrollbar-track {
     background-color: rgb(75 85 99 / 0.8);
   }
 
-  .lg\:bg-gray-900 {
-    --tw-bg-opacity: 1;
-    background-color: rgb(17 24 39 / var(--tw-bg-opacity));
-  }
-
   .lg\:bg-transparent {
     background-color: transparent;
-  }
-
-  .lg\:bg-\[\] {
-    background-color: ;
-  }
-
-  .lg\:bg-\[\#\] {
-    background-color: #;
-  }
-
-  .lg\:bg-\[\#00\] {
-    background-color: #00;
-  }
-
-  .lg\:bg-\[\#00ff\] {
-    background-color: #00ff;
-  }
-
-  .lg\:bg-\[\#00ff99\] {
-    --tw-bg-opacity: 1;
-    background-color: rgb(0 255 153 / var(--tw-bg-opacity));
-  }
-
-  .lg\:bg-\[\#0099\] {
-    background-color: #0099;
-  }
-
-  .lg\:bg-\[\#0099ff\] {
-    --tw-bg-opacity: 1;
-    background-color: rgb(0 153 255 / var(--tw-bg-opacity));
-  }
-
-  .lg\:bg-\[\@151515\] {
-    background-color: @151515;
-  }
-
-  .lg\:bg-\[\#151515\] {
-    --tw-bg-opacity: 1;
-    background-color: rgb(21 21 21 / var(--tw-bg-opacity));
   }
 
   .lg\:bg-gradient-to-t {
     background-image: linear-gradient(to top, var(--tw-gradient-stops));
   }
 
-  .lg\:from-black {
-    --tw-gradient-from: #000 var(--tw-gradient-from-position);
-    --tw-gradient-to: rgb(0 0 0 / 0) var(--tw-gradient-to-position);
-    --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
-  }
-
-  .lg\:from-black\/50 {
-    --tw-gradient-from: rgb(0 0 0 / 0.5) var(--tw-gradient-from-position);
-    --tw-gradient-to: rgb(0 0 0 / 0) var(--tw-gradient-to-position);
-    --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
-  }
-
   .lg\:from-black\/40 {
     --tw-gradient-from: rgb(0 0 0 / 0.4) var(--tw-gradient-from-position);
     --tw-gradient-to: rgb(0 0 0 / 0) var(--tw-gradient-to-position);
     --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
-  }
-
-  .lg\:to-black {
-    --tw-gradient-to: #000 var(--tw-gradient-to-position);
-  }
-
-  .lg\:to-black\/60 {
-    --tw-gradient-to: rgb(0 0 0 / 0.6) var(--tw-gradient-to-position);
-  }
-
-  .lg\:to-black\/0 {
-    --tw-gradient-to: rgb(0 0 0 / 0) var(--tw-gradient-to-position);
   }
 
   .lg\:to-black\/50 {
