--- a/public/styles.css
+++ b/public/styles.css
@@ -540,6 +540,10 @@ video {
   --tw-backdrop-sepia:  ;
 }
 
+.fixed {
+  position: fixed;
+}
+
 .absolute {
   position: absolute;
 }
@@ -548,16 +552,52 @@ video {
   position: relative;
 }
 
+.-top-\[6\%\] {
+  top: -6%;
+}
+
+.-top-\[7\%\] {
+  top: -7%;
+}
+
 .bottom-0 {
   bottom: 0px;
+}
+
+.bottom-2 {
+  bottom: 0.5rem;
+}
+
+.left-0 {
+  left: 0px;
+}
+
+.left-\[159px\] {
+  left: 159px;
+}
+
+.left-\[40\%\] {
+  left: 40%;
+}
+
+.right-0 {
+  right: 0px;
 }
 
 .right-2 {
   right: 0.5rem;
 }
 
+.top-0 {
+  top: 0px;
+}
+
 .top-2 {
   top: 0.5rem;
+}
+
+.z-0 {
+  z-index: 0;
 }
 
 .z-10 {
@@ -566,6 +606,10 @@ video {
 
 .z-20 {
   z-index: 20;
+}
+
+.z-30 {
+  z-index: 30;
 }
 
 .m-3 {
@@ -580,8 +624,16 @@ video {
   height: 2.5rem;
 }
 
+.h-20 {
+  height: 5rem;
+}
+
 .h-24 {
   height: 6rem;
+}
+
+.h-72 {
+  height: 18rem;
 }
 
 .h-80 {
@@ -594,6 +646,10 @@ video {
 
 .h-\[500px\] {
   height: 500px;
+}
+
+.h-\[70px\] {
+  height: 70px;
 }
 
 .h-\[85\%\] {
@@ -616,8 +672,16 @@ video {
   width: 5rem;
 }
 
+.w-24 {
+  width: 6rem;
+}
+
 .w-72 {
   width: 18rem;
+}
+
+.w-96 {
+  width: 24rem;
 }
 
 .w-\[15\%\] {
@@ -644,12 +708,24 @@ video {
   width: 70%;
 }
 
+.w-\[70px\] {
+  width: 70px;
+}
+
 .w-full {
   width: 100%;
 }
 
+.w-screen {
+  width: 100vw;
+}
+
 .items-center {
   align-items: center;
+}
+
+.justify-start {
+  justify-content: flex-start;
 }
 
 .justify-center {
@@ -696,6 +772,11 @@ video {
 
 .rounded-md {
   border-radius: 0.375rem;
+}
+
+.bg-\[\#0099ff\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 153 255 / var(--tw-bg-opacity));
 }
 
 .bg-\[\#151515\] {
@@ -789,18 +870,9 @@ video {
      object-fit: cover;
 }
 
-.p-2 {
-  padding: 0.5rem;
-}
-
 .px-2 {
   padding-left: 0.5rem;
   padding-right: 0.5rem;
-}
-
-.px-20 {
-  padding-left: 5rem;
-  padding-right: 5rem;
 }
 
 .px-4 {
@@ -821,6 +893,10 @@ video {
 .py-10 {
   padding-top: 2.5rem;
   padding-bottom: 2.5rem;
+}
+
+.pl-3 {
+  padding-left: 0.75rem;
 }
 
 .text-2xl {
@@ -918,8 +994,9 @@ video {
 }
 
 .list li:nth-child(3) {
+  font-weight: 700;
   --tw-text-opacity: 1;
-  color: rgb(0 255 102 / var(--tw-text-opacity));
+  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
 section {
@@ -1051,10 +1128,6 @@ body::-webkit-scrollbar-track {
     top: 0px;
   }
 
-  .mobile\:z-30 {
-    z-index: 30;
-  }
-
   .mobile\:z-50 {
     z-index: 50;
   }
@@ -1111,10 +1184,6 @@ body::-webkit-scrollbar-track {
     width: 100%;
   }
 
-  .mobile\:w-screen {
-    width: 100vw;
-  }
-
   .mobile\:-translate-x-\[100\%\] {
     --tw-translate-x: -100%;
     transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
@@ -1156,26 +1225,16 @@ body::-webkit-scrollbar-track {
     background-color: rgb(0 0 0 / var(--tw-bg-opacity));
   }
 
+  .mobile\:bg-black\/40 {
+    background-color: rgb(0 0 0 / 0.4);
+  }
+
   .mobile\:bg-black\/50 {
     background-color: rgb(0 0 0 / 0.5);
   }
 
   .mobile\:bg-black\/90 {
     background-color: rgb(0 0 0 / 0.9);
-  }
-
-  .mobile\:bg-gradient-to-tr {
-    background-image: linear-gradient(to top right, var(--tw-gradient-stops));
-  }
-
-  .mobile\:from-\[\#0099ff\] {
-    --tw-gradient-from: #0099ff var(--tw-gradient-from-position);
-    --tw-gradient-to: rgb(0 153 255 / 0) var(--tw-gradient-to-position);
-    --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
-  }
-
-  .mobile\:to-\[\#0092F3\] {
-    --tw-gradient-to: #0092F3 var(--tw-gradient-to-position);
   }
 
   .mobile\:p-0 {
@@ -1202,6 +1261,11 @@ body::-webkit-scrollbar-track {
     padding-bottom: 10rem;
   }
 
+  .mobile\:px-0 {
+    padding-left: 0px;
+    padding-right: 0px;
+  }
+
   .mobile\:pb-10 {
     padding-bottom: 2.5rem;
   }
@@ -1224,12 +1288,6 @@ body::-webkit-scrollbar-track {
 
   .mobile\:backdrop-blur-md {
     --tw-backdrop-blur: blur(12px);
-    -webkit-backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
-            backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
-  }
-
-  .mobile\:backdrop-blur-sm {
-    --tw-backdrop-blur: blur(4px);
     -webkit-backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
             backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
   }
@@ -1259,10 +1317,6 @@ body::-webkit-scrollbar-track {
     position: fixed;
   }
 
-  .lg\:z-0 {
-    z-index: 0;
-  }
-
   .lg\:z-50 {
     z-index: 50;
   }
@@ -1287,16 +1341,12 @@ body::-webkit-scrollbar-track {
     height: 5rem;
   }
 
-  .lg\:h-full {
-    height: 100%;
-  }
-
-  .lg\:h-screen {
-    height: 100vh;
-  }
-
   .lg\:h-auto {
     height: auto;
+  }
+
+  .lg\:h-full {
+    height: 100%;
   }
 
   .lg\:w-1\/2 {
