--- a/public/styles.css
+++ b/public/styles.css
@@ -774,6 +774,10 @@ video {
   border-radius: 0.375rem;
 }
 
+.rounded-sm {
+  border-radius: 0.125rem;
+}
+
 .bg-\[\#0099ff\] {
   --tw-bg-opacity: 1;
   background-color: rgb(0 153 255 / var(--tw-bg-opacity));
@@ -870,6 +874,14 @@ video {
      object-fit: cover;
 }
 
+.p-3 {
+  padding: 0.75rem;
+}
+
+.p-2 {
+  padding: 0.5rem;
+}
+
 .px-2 {
   padding-left: 0.5rem;
   padding-right: 0.5rem;
@@ -951,6 +963,31 @@ video {
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.text-gray-500 {
+  --tw-text-opacity: 1;
+  color: rgb(107 114 128 / var(--tw-text-opacity));
+}
+
+.text-blue-500 {
+  --tw-text-opacity: 1;
+  color: rgb(59 130 246 / var(--tw-text-opacity));
+}
+
+.text-blue-600 {
+  --tw-text-opacity: 1;
+  color: rgb(37 99 235 / var(--tw-text-opacity));
+}
+
+.text-emerald-600 {
+  --tw-text-opacity: 1;
+  color: rgb(5 150 105 / var(--tw-text-opacity));
+}
+
+.text-pink-600 {
+  --tw-text-opacity: 1;
+  color: rgb(219 39 119 / var(--tw-text-opacity));
 }
 
 .accent-blue-600 {
@@ -1266,6 +1303,11 @@ body::-webkit-scrollbar-track {
     padding-right: 0px;
   }
 
+  .mobile\:py-52 {
+    padding-top: 13rem;
+    padding-bottom: 13rem;
+  }
+
   .mobile\:pb-10 {
     padding-bottom: 2.5rem;
   }
@@ -1276,6 +1318,10 @@ body::-webkit-scrollbar-track {
 
   .mobile\:pt-28 {
     padding-top: 7rem;
+  }
+
+  .mobile\:pt-60 {
+    padding-top: 15rem;
   }
 
   .mobile\:text-\[20px\] {
