--- a/public/styles.css
+++ b/public/styles.css
@@ -1048,6 +1048,11 @@ video {
   line-height: 1.25rem;
 }
 
+.text-xl {
+  font-size: 1.25rem;
+  line-height: 1.75rem;
+}
+
 .font-semibold {
   font-weight: 600;
 }
@@ -1097,6 +1102,11 @@ video {
 .text-\[\#0099ff\] {
   --tw-text-opacity: 1;
   color: rgb(0 153 255 / var(--tw-text-opacity));
+}
+
+.text-gray-500 {
+  --tw-text-opacity: 1;
+  color: rgb(107 114 128 / var(--tw-text-opacity));
 }
 
 .accent-blue-600 {
