--- a/public/styles.css
+++ b/public/styles.css
@@ -552,8 +552,12 @@ video {
   position: relative;
 }
 
-.inset-2 {
-  inset: 0.5rem;
+.-top-\[11\%\] {
+  top: -11%;
+}
+
+.-top-\[13\%\] {
+  top: -13%;
 }
 
 .-top-\[6\%\] {
@@ -566,6 +570,10 @@ video {
 
 .bottom-0 {
   bottom: 0px;
+}
+
+.bottom-10 {
+  bottom: 2.5rem;
 }
 
 .bottom-2 {
@@ -600,26 +608,6 @@ video {
   top: 0.5rem;
 }
 
-.-top-\[10\%\] {
-  top: -10%;
-}
-
-.-top-\[15\%\] {
-  top: -15%;
-}
-
-.-top-\[13\%\] {
-  top: -13%;
-}
-
-.-top-\[11\%\] {
-  top: -11%;
-}
-
-.bottom-10 {
-  bottom: 2.5rem;
-}
-
 .z-0 {
   z-index: 0;
 }
@@ -638,10 +626,6 @@ video {
 
 .z-40 {
   z-index: 40;
-}
-
-.m-3 {
-  margin: 0.75rem;
 }
 
 .flex {
@@ -752,10 +736,6 @@ video {
   align-items: center;
 }
 
-.justify-start {
-  justify-content: flex-start;
-}
-
 .justify-center {
   justify-content: center;
 }
@@ -810,24 +790,23 @@ video {
   border-radius: 0.125rem;
 }
 
+.rounded-b {
+  border-bottom-right-radius: 0.25rem;
+  border-bottom-left-radius: 0.25rem;
+}
+
+.rounded-b-lg {
+  border-bottom-right-radius: 0.5rem;
+  border-bottom-left-radius: 0.5rem;
+}
+
+.rounded-b-2xl {
+  border-bottom-right-radius: 1rem;
+  border-bottom-left-radius: 1rem;
+}
+
 .border-t {
   border-top-width: 1px;
-}
-
-.border-\[\] {
-  border-color: ;
-}
-
-.border-\[3\] {
-  border-color: 3;
-}
-
-.border-\[300\] {
-  border-color: 300;
-}
-
-.border-\[30099ff\] {
-  border-color: 30099ff;
 }
 
 .border-\[\#0099ff\] {
@@ -845,11 +824,6 @@ video {
   background-color: rgb(21 21 21 / var(--tw-bg-opacity));
 }
 
-.bg-\[\#1A2027\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(26 32 39 / var(--tw-bg-opacity));
-}
-
 .bg-\[\#1a2027\] {
   --tw-bg-opacity: 1;
   background-color: rgb(26 32 39 / var(--tw-bg-opacity));
@@ -861,6 +835,11 @@ video {
 }
 
 .bg-\[\#EAE3DD\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(234 227 221 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#eae3dd\] {
   --tw-bg-opacity: 1;
   background-color: rgb(234 227 221 / var(--tw-bg-opacity));
 }
@@ -878,10 +857,6 @@ video {
   background-color: rgb(0 0 0 / 0.4);
 }
 
-.bg-black\/50 {
-  background-color: rgb(0 0 0 / 0.5);
-}
-
 .bg-blue-700 {
   --tw-bg-opacity: 1;
   background-color: rgb(29 78 216 / var(--tw-bg-opacity));
@@ -896,48 +871,31 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
+.bg-gray-300 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(209 213 219 / var(--tw-bg-opacity));
+}
+
+.bg-gray-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(156 163 175 / var(--tw-bg-opacity));
+}
+
 .bg-\[\] {
   background-color: ;
+}
+
+.bg-\[3\] {
+  background-color: 3;
 }
 
 .bg-\[\#\] {
   background-color: #;
 }
 
-.bg-\[\#ea\] {
-  background-color: #ea;
-}
-
-.bg-\[\#eae\] {
+.bg-\[\#999\] {
   --tw-bg-opacity: 1;
-  background-color: rgb(238 170 238 / var(--tw-bg-opacity));
-}
-
-.bg-\[\#eae3dd\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(234 227 221 / var(--tw-bg-opacity));
-}
-
-.bg-\[\#0099\] {
-  background-color: #0099;
-}
-
-.bg-\[\#e\] {
-  background-color: #e;
-}
-
-.bg-\[\#eae3\] {
-  background-color: #eae3;
-}
-
-.bg-\[\#EB8E00\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(235 142 0 / var(--tw-bg-opacity));
-}
-
-.bg-gray-200 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(229 231 235 / var(--tw-bg-opacity));
+  background-color: rgb(153 153 153 / var(--tw-bg-opacity));
 }
 
 .bg-opacity-60 {
@@ -1009,10 +967,6 @@ video {
   padding-bottom: 2.5rem;
 }
 
-.pl-3 {
-  padding-left: 0.75rem;
-}
-
 .text-center {
   text-align: center;
 }
@@ -1057,6 +1011,11 @@ video {
   font-weight: 600;
 }
 
+.text-\[\#0099ff\] {
+  --tw-text-opacity: 1;
+  color: rgb(0 153 255 / var(--tw-text-opacity));
+}
+
 .text-blue-600 {
   --tw-text-opacity: 1;
   color: rgb(37 99 235 / var(--tw-text-opacity));
@@ -1077,6 +1036,11 @@ video {
   color: rgb(209 213 219 / var(--tw-text-opacity));
 }
 
+.text-gray-500 {
+  --tw-text-opacity: 1;
+  color: rgb(107 114 128 / var(--tw-text-opacity));
+}
+
 .text-pink-600 {
   --tw-text-opacity: 1;
   color: rgb(219 39 119 / var(--tw-text-opacity));
@@ -1089,24 +1053,6 @@ video {
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
-.text-\[\] {
-  color: ;
-}
-
-.text-\[\#\] {
-  color: #;
-}
-
-.text-\[\#0099ff\] {
-  --tw-text-opacity: 1;
-  color: rgb(0 153 255 / var(--tw-text-opacity));
-}
-
-.text-gray-500 {
-  --tw-text-opacity: 1;
-  color: rgb(107 114 128 / var(--tw-text-opacity));
 }
 
 .accent-blue-600 {
@@ -1369,22 +1315,16 @@ body::-webkit-scrollbar-track {
     justify-content: space-between;
   }
 
-  .mobile\:space-y-5 > :not([hidden]) ~ :not([hidden]) {
-    --tw-space-y-reverse: 0;
-    margin-top: calc(1.25rem * calc(1 - var(--tw-space-y-reverse)));
-    margin-bottom: calc(1.25rem * var(--tw-space-y-reverse));
-  }
-
-  .mobile\:space-y-10 > :not([hidden]) ~ :not([hidden]) {
-    --tw-space-y-reverse: 0;
-    margin-top: calc(2.5rem * calc(1 - var(--tw-space-y-reverse)));
-    margin-bottom: calc(2.5rem * var(--tw-space-y-reverse));
-  }
-
   .mobile\:space-y-16 > :not([hidden]) ~ :not([hidden]) {
     --tw-space-y-reverse: 0;
     margin-top: calc(4rem * calc(1 - var(--tw-space-y-reverse)));
     margin-bottom: calc(4rem * var(--tw-space-y-reverse));
+  }
+
+  .mobile\:space-y-5 > :not([hidden]) ~ :not([hidden]) {
+    --tw-space-y-reverse: 0;
+    margin-top: calc(1.25rem * calc(1 - var(--tw-space-y-reverse)));
+    margin-bottom: calc(1.25rem * var(--tw-space-y-reverse));
   }
 
   .mobile\:rounded-full {
